anypoint-private-cloud/v/1.6/install-workflow.adoc
= Workflow: Install Anypoint Platform Private Cloud Edition

This topic describes the workflow for installing Anypoint Platform Private Cloud Edition.

Before performing this workflow, ensure that you have verified the prerequisites described in link:prereq-workflow[Workflow: Install and Verify Prerequisites].

1. Install Anypoint Platform Private Cloud Edition. You can use the GUI-based installation wizard or run an automated installation from the command line.

* link:install-installer[To Run the Anypoint Platform Private Cloud Edition Installer].
* link:install-auto-installer[To Install Anypoint Platform Private Cloud Using the Automated Installer].

1. Configure an external authentication provider. See link:/access-management/conf-ldap-private-cloud-task[To Configure LDAP in Anypoint Platform Private Cloud]

1. Create a load balancer as described in link:install-create-lb[To Create a Load Balancer].

1. Perform additional installation tasks as described in link:install-add-tasks[To Perform Additional Installation Tasks].

1. Ensure that you have configured your system to perform regular backups. See link:backup-and-disaster-recovery[About Backup and Recovery] for more information.

1. (Optional) Install Anypoint Platform for PCF
+
To deploy your applications to Pivotal Cloud Foundry, complete the link:/anypoint-platform-pcf/v/1.6/pcf-workflow[Workflow: Install, Configure, and Use Anypoint Platform for PCF].

After completing the steps in this workflow, you can deploy and manage applications, register APIs and use the API Exchange on an Anypoint Platform environment running on your own local network.

